# esp-who

./: .gitignore
components/who_app/who_detect_app/: who_detect_app_lcd.cpp
components/who_peripherals/who_lcd/: who_lcd.cpp
examples/benchmark_tool/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/benchmark_tool/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
examples/human_face_recognition/: STRUCTURE.md  dependencies.lock.esp32_s3_eye
examples/ultra_lightweight_human_detection/: CMakeLists.txt  PLAN.md  README.md  dependencies.lock.esp32_s3_eye
examples/ultra_lightweight_human_detection/components/uhd_detect/: CMakeLists.txt  idf_component.yml  uhd_constants.hpp  uhd_detect.cpp  uhd_detect.hpp
examples/ultra_lightweight_human_detection/main/: CMakeLists.txt  app_main.cpp  frame_cap_pipeline.cpp  frame_cap_pipeline.hpp  simple_gray_lcd_disp.cpp  simple_gray_lcd_disp.hpp
tools/: bsp_ext.py
