set(srcs uhd_detect.cpp)

set(include_dirs .)

set(requires espressif__esp-dl)

set(UHD_MODEL "w16" CACHE STRING "UHD model variant (w16, w16_highacc, w24, w24_highacc, w32, w32_highacc, w32_yuv422, w32_y, w40, w40_highacc, w48, w48_highacc, w56, w56_highacc, w64, or w64_highacc)")

if(UHD_MODEL STREQUAL "w16")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w16_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w16_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W16)
elseif(UHD_MODEL STREQUAL "w16_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w16_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w16_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W16)
    set(model_extra_define UHD_MODEL_HIGHACC)
elseif(UHD_MODEL STREQUAL "w24")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w24_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w24_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W24)
elseif(UHD_MODEL STREQUAL "w24_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w24_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w24_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W24)
    set(model_extra_define UHD_MODEL_HIGHACC)
elseif(UHD_MODEL STREQUAL "w32")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W32)
elseif(UHD_MODEL STREQUAL "w32_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W32)
    set(model_extra_define UHD_MODEL_HIGHACC)
elseif(UHD_MODEL STREQUAL "w32_yuv422")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_yuv422_static_nopost_nocat_espdl)
    set(model_name ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_yuv422_static_nopost_nocat)
    set(model_define UHD_MODEL_W32_YUV422)
    set(model_extra_define UHD_MODEL_YUV422)
elseif(UHD_MODEL STREQUAL "w32_y")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_y_static_nopost_nocat_espdl)
    set(model_name ultratinyod_res_anc8_w32_64x64_opencv_inter_nearest_y_static_nopost_nocat)
    set(model_define UHD_MODEL_W32_Y)
    set(model_extra_define UHD_MODEL_Y)
elseif(UHD_MODEL STREQUAL "w40")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w40_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w40_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W40)
elseif(UHD_MODEL STREQUAL "w40_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w40_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w40_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W40)
    set(model_extra_define UHD_MODEL_HIGHACC)
elseif(UHD_MODEL STREQUAL "w48")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w48_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w48_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W48)
elseif(UHD_MODEL STREQUAL "w48_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w48_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w48_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W48)
    set(model_extra_define UHD_MODEL_HIGHACC)
elseif(UHD_MODEL STREQUAL "w56")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w56_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w56_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W56)
elseif(UHD_MODEL STREQUAL "w56_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w56_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w56_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W56)
    set(model_extra_define UHD_MODEL_HIGHACC)
elseif(UHD_MODEL STREQUAL "w64")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w64_64x64_opencv_inter_nearest_static_nopost_espdl)
    set(model_name ultratinyod_res_anc8_w64_64x64_opencv_inter_nearest_static_nopost_nocat)
    set(model_define UHD_MODEL_W64)
elseif(UHD_MODEL STREQUAL "w64_highacc")
    set(model_dir ${CMAKE_CURRENT_LIST_DIR}/../../../../models/uhd/ultratinyod_res_anc8_w64_64x64_opencv_inter_nearest_static_nopost_nocat_espdl_highacc)
    set(model_name ultratinyod_res_anc8_w64_64x64_opencv_inter_nearest_static_nopost_nocat_acc)
    set(model_define UHD_MODEL_W64)
    set(model_extra_define UHD_MODEL_HIGHACC)
else()
    message(FATAL_ERROR "Unknown UHD_MODEL='${UHD_MODEL}'. Use w16, w16_highacc, w24, w24_highacc, w32, w32_highacc, w32_yuv422, w32_y, w40, w40_highacc, w48, w48_highacc, w56, w56_highacc, w64, or w64_highacc.")
endif()

set(model_path ${model_dir}/${model_name}.espdl)

idf_component_register(SRCS ${srcs} INCLUDE_DIRS ${include_dirs} REQUIRES ${requires} EMBED_FILES ${model_path})
target_compile_definitions(${COMPONENT_LIB} PUBLIC ${model_define} ${model_extra_define})
